fix java generics isp 2